syntax = "proto3";

package raccoons.example;

option java_package = "co.raccoons.example";
option java_outer_classname = "MultipleFalseProto";
option java_multiple_files = false;

message MultipleFalse {
  string name = 1;
}