syntax = "proto3";

package raccoons.example;

option java_outer_classname = "NoJavaPackageProto";
option java_multiple_files = true;

message NoJavaPackage {
  string name = 1;
}