syntax = "proto3";

package raccoons.example;

option java_package = "co.raccoons.example";
option java_multiple_files = true;

message UserInfo {
  string name = 1;
}